--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 <h3>En los siguientes enlaces puedes encontrar información acerca de como programar de la manera más básica en html y CSS</h3>
 
 
-<h4><a href="http://www.alumnadogah.com/alu15/intro_html">Introducción a html</a></h4>
+<h4><a target="_blank" href="http://www.alumnadogah.com/alu15/intro_html">Introducción a html</a></h4>
 
-<h4><a href="http://www.alumnadogah.com/alu15/intro_css">Introducción a CSS</a></h4>
+<h4><a target="_blank" href="http://www.alumnadogah.com/alu15/intro_css">Introducción a CSS</a></h4>
 
-<h4><a href="http://www.alumnadogah.com/alu15/mas_etiquetas_html">Más etiquetas html</a></h4>
+<h4><a target="_blank" href="http://www.alumnadogah.com/alu15/mas_etiquetas_html">Más etiquetas html</a></h4>
 
+<h4><a target="_blank" href="http://www.alumnadogah.com/alu15/css_propiedades_texto">CSS propiedades texto</a></h4>
 
-
+<h4><a target="_blank" href="http://www.alumnadogah.com/alu15/css_layout">CSS Layout</a></h4>
 </body>
 </html>
