--- a/mas_etiquetas_html.html
+++ b/mas_etiquetas_html.html
@@ -7,7 +7,7 @@
 <body>
 
 
-
+<h1>ACTUALIZADO 22/11/21</h1>
 
     <h1 id="mas etiquetas html">MORE HTML TAGS JOSE MARIA</h1>
 
@@ -39,7 +39,7 @@
 
 <h2>ENLACE INTERNO JOSE MARIA</h2>   
 <p>Se puede enlazar varias partes dentro de una misma página web, a través de el uso "id"</p>
-<p><a href="#mas etiquetas html"></a></p> 
+<p><a href="http://www.alumnadogah.com/alu15/intro_css">Introducción a css</a></p> 
 
 <h2>TABLA- JOSE MARIA </h2>
 
